--- a/client/src/views/SocioPage/components/CenterDynamicView/CenterDynamicView.module.css
+++ b/client/src/views/SocioPage/components/CenterDynamicView/CenterDynamicView.module.css
@@ -1,8 +1,8 @@
 .centerDynamicContainer {
-  width: 75vw; 
-  background-color: white; 
+  width: 75vw;
+  background-color: white;
   height: 80vh;
   display: flex;
   flex-direction: column;
-  
+  overflow-y: scroll;
 }
