--- a/client/src/components/AboutHome/AboutHome.module.css
+++ b/client/src/components/AboutHome/AboutHome.module.css
@@ -52,9 +52,9 @@
 .aboutMapIcon{
     color: #eb4e27;
 }
-/* 
+
 @media(max-width:768px){
     .flexy{
         grid-template-columns: 1fr;
     }
-} */
+}
