--- a/client/src/views/LoginPage/LoginPage.module.css
+++ b/client/src/views/LoginPage/LoginPage.module.css
@@ -19,6 +19,29 @@
   height: 30vh;
   border-radius: 5px;
 }
+.headerOfDialog {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+}
+.headerOfDialog button {
+  height: 20px;
+  width: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #fe4f22;
+  color: #fe4f22;
+  background-color: transparent;
+}
+.headerOfDialog button:hover {
+  cursor: pointer;
+  background-color: #fe4f22;
+  color: white;
+}
 .dialogContainer {
   display: flex;
   flex-direction: column;
@@ -89,6 +112,7 @@
 .loginBtn {
   background-color: white;
   box-shadow: 10px 10px 20px rgb(171, 171, 171);
+  margin-top: 20px;
   border: none;
   padding: 10px;
   width: 180px;
