--- a/client/src/views/SocioPage/components/PerfilUsuario/Perfil.module.css
+++ b/client/src/views/SocioPage/components/PerfilUsuario/Perfil.module.css
@@ -11,20 +11,25 @@
   align-items: center;
   justify-content: center;
 }
-.perfilUser button {
-  height: 5ex;
-  width: 10ex;
+.verify {
   border-radius: 2ex;
   border: none;
-  color: #eb4e27;
+  background-color: black;
+  color: white;
   background-color: #111111;
   margin: 2ex;
-  font-size: 4ex;
+  font-size: 1.2rem;
   cursor: pointer;
+  padding: 0.4rem 0.8rem;
 }
-.perfilUser button:hover {
-  height: 100%;
-  width: 100%;
+
+.verify:hover {
+  background-color: #eb4e27;
+}
+
+.notVerified {
+  font-size: 1rem;
+  color: red;
 }
 
 .perfilUserName img {
