--- a/client/src/components/Detail/detail.module.css
+++ b/client/src/components/Detail/detail.module.css
@@ -2,7 +2,7 @@
 .containerOpen{
     display: absolute;
     width: 30vw;
-    height: 70vh;
+    height: 75vh;
     background-color: rgba(0, 0, 0, 0.815);
     border-radius: 5px;
     margin-top: 15vh;
@@ -38,7 +38,11 @@
     font-size: 1rem;
     width: 95%;
     margin-left: .75vw;
+    overflow: auto;
     
+}
+.infoDescription{
+    overflow: auto;
 }
 
 .infoTitle{
@@ -49,16 +53,22 @@
 }
 
 .infoPrice{
+    margin-top: 1vh;
     font-size: 1.5rem;
     font-weight: bold;
     color: #ff4524;
 }
 
 .elbo{
-    height: 5vh;
-    width: 10vw;
+    height: 4vh;
+    width: 8vw;
     background-color: rgb(255, 75, 43);
     color: rgb(255, 255, 255);
     font-size: 1vw;
     border-radius: 10px;
+    margin-top: 2vh;
+}
+
+.horarios{
+    margin-top: 2vh;
 }
