--- a/client/src/views/AdminPage/components/AdminCardView/AdminCardView.module.css
+++ b/client/src/views/AdminPage/components/AdminCardView/AdminCardView.module.css
@@ -39,12 +39,24 @@
   height: 75vh;
   width: 75vw;
   background-color: white;
-  overflow: scroll;
+  overflow: auto;
 }
 .tableAdminView {
   table-layout: auto;
   border-collapse: collapse;
   width: max-content;
+}
+
+.tableAdminView thead {
+  position: sticky;
+  top: 0px;
+  background-color: whitesmoke;
+  height: 40px;
+}
+
+.tableAdminView thead tr {
+  color: grey;
+  font-family: sans-serif;
 }
 .tableAdminView tbody tr td {
   padding: 10px;
@@ -54,7 +66,7 @@
   border: 1px solid #cdcccc;
 }
 .tableAdminView tr th {
-  border: 1px solid #cdcccc;
+  border: none;
 }
 .tdDescription {
   width: 480px;
@@ -73,11 +85,6 @@
 .daysItems {
   list-style: none;
 }
-.hourItems {
-  color: #fe4f22;
-  list-style-type: square;
-
-}
 
 .headerOfCard {
   display: flex;
@@ -93,15 +100,6 @@
 }
 .iconBtn:hover {
   cursor: pointer;
-}
-
-.header {
-  padding-left: 20px;
-  padding-right: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid grey;
 }
 
 .listOfItems {
@@ -147,32 +145,17 @@
   outline: none;
 }
 
-.collapsible {
-  background-color: #777;
-  color: white;
-  cursor: pointer;
-
-  padding: 8px;
-  width: 100%;
-  border: none;
-  display: flex;
-  justify-content: space-around;
-  outline: none;
-  font-size: 15px;
+.userDataContainer ul li {
+  list-style: none;
+  font-family: sans-serif;
+  color: grey;
+  text-align: start;
 }
-
-.active {
-  background-color: whitesmoke;
-}
-.collapsible:hover {
-  background-color: #fe4f22;
-}
-
-.content {
-  padding: 0 18px;
-  display: none;
-  overflow: hidden;
-  background-color: #f1f1f1;
+.userDataContainer ul li span {
+  font-family: sans-serif;
+  font-size: 14px;
+  color: #fe4f22;
+  font-weight: 600;
 }
 
 @media screen and (max-width: 1050px) {
