--- a/client/src/components/ReviewCard/ReviewCard.module.css
+++ b/client/src/components/ReviewCard/ReviewCard.module.css
@@ -91,4 +91,12 @@
     .reviewCardContent{
         font-size: 1.2rem;
     }
+
+    .reviewCardActivity{
+        text-transform: uppercase;
+        color: white;
+        text-align: center;
+        /* border-top: 1px solid white; */
+        font-size: 1rem;
+    }
 }
