--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -300,4 +300,26 @@ cursor: pointer;
     gap: 4.8rem;
   }
 
+  .cart-open {
+    display: block;
+    text-align: center;
+    position: absolute;
+    top: 12vh;
+    right: 14vw;
+    width: 117vw;
+    height: 90vh;
+    z-index: 9999;
+    }
+
+    .close-cart {
+      position: absolute;
+      top: 1.5vh;
+      color: rgb(0, 0, 0);
+      background-color: rgba(255, 102, 0, 0.705);
+      border:  none;
+      font-weight: 800;
+      right: 22vw;
+      cursor: pointer;
+      }
+
 } 
