se agrega burbuja de chatbot, crean componentes para validacion del codigo de descuento

--- a/client/src/components/Cart/cart.module.css
+++ b/client/src/components/Cart/cart.module.css
@@ -88,6 +88,10 @@ link {
     text-decoration: none;
 }
 
+.descuento input{
+    text-align: center;
+}
+
 
 @media (max-width: 62em) {
     .cleanCart{
