--- a/client/src/components/NewClases/newClases.module.css
+++ b/client/src/components/NewClases/newClases.module.css
@@ -84,6 +84,22 @@
 .chat{
     position: absolute;
     margin-top: 45vh;
+    visibility: hidden;
+}
+
+.bot{
+    color: #000000;
+    background-color: #ff9100;
+    border-radius: 50%;
+    width: 4vw;
+    height: 4vw;
+    position: sticky;
+    top: 85vh;
+    left: 1vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
 
 
