--- a/client/src/components/Cart/style.css
+++ b/client/src/components/Cart/style.css
@@ -2,8 +2,11 @@
 
 .validar-red{
     background-color: red;
+    cursor: pointer;
+    font-size: 1rem;
 }
 
 .validar-green{
     background-color: green;
+    color:green;
 }
