--- a/client/src/views/SocioPage/components/MyActivities/MyActivities.module.css
+++ b/client/src/views/SocioPage/components/MyActivities/MyActivities.module.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
 }
-.userTitleAndAddBtn{
+/* .userTitleAndAddBtn{
     display: flex;
     width: 90%;
     align-items: center;
@@ -33,18 +33,18 @@
     /* background-color: #fdede9;
     transition: all .3s;
     color: #eb4e27; */
-}
-.userAddBtn:focus {
+/* } */
+/* .userAddBtn:focus {
     outline: none;
 }
 .userCardLayout{
     margin-top: 20px;
     height: 30vh;
-    width: 50vw; /* ver por tema responsive */
+    width: 50vw; ver por tema responsive
     background-color: white;
-    /* overflow: scroll; */
-}
-.containerTable{
+    overflow: scroll;
+} */
+/* .containerTable{
     background-color: #fdede9;
     border-collapse: collapse;
     width: 100%;
@@ -61,4 +61,4 @@
 .tableRow:hover{
     background-color: #fe4f22;
     color: white;
-}
+}  */
