--- a/client/src/components/About/About.module.css
+++ b/client/src/components/About/About.module.css
@@ -1,20 +1,26 @@
-.aboutBox{
+.Box{
     height: 90vh;
     text-align: center;
 }       
 
-.aboutCards{
-    display:flex;
-    justify-content: space-evenly;
+.Cards{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 15px;
+    grid-row-gap: 50px;
+    
+    
+
 }
 
-.aboutTitle{
+.Title{
     justify-self: center;
     margin-top: 5vh;
     margin-bottom: 5vh;
 }
 
-.aboutProfilePicture{
+.ProfilePicture{
     margin-top: 0.2rem;
     grid-row: 1/2;
     grid-column: 1/3;
@@ -22,9 +28,10 @@
     height: 10rem;
     border-radius: 10rem;
     justify-self: center;
+    border: 1px solid rgb(74, 114, 201);
 }
 
-.aboutDevelopers{
+.Developers{
     display: grid;
     grid-template-rows: 1fr 1fr 0.5fr 1fr;
     grid-template-columns: 1fr 1fr;
@@ -34,14 +41,16 @@
     border-radius: 1rem;
     transition: all;
     transition-duration: 0.8s;
+    border: 1px solid rgb(74, 114, 201);
+    margin-left: 70px;
 }
 
-.aboutDevelopers:hover {
+.Developers:hover {
     width:16rem;
     height:21rem;
 }
 
-.aboutNames{
+.Names{
     margin-top: 0.2rem;
     grid-row:2/3;
     grid-column: 1/3;
@@ -50,21 +59,20 @@
     color: white;
 }
 
-.aboutGitHub {
+.GitHub {
     grid-row: 4/5;
     grid-column: 1/2;
     justify-self: center;
-}
-
-.aboutLinkedInLogo {
     width: 3.5rem;
     height: 3.5rem;
 }
 
-.aboutLinkedIn {
+.LinkedIn {
     grid-row: 4/5;
     grid-column: 2/3;
     justify-self: center;
+    width: 3.5rem;
+    height: 3.5rem;
 }
 
 .aboutRole {
