--- a/client/src/components/Footer/Footer.module.css
+++ b/client/src/components/Footer/Footer.module.css
@@ -6,7 +6,7 @@
 } */
 
 
-.FooterAll{
+.All{
     position: relative;
     bottom:0;
     width:100%;
@@ -14,15 +14,16 @@
     display: flex;
     justify-content: center;
     height: 5rem;
-    background-image: linear-gradient(rgb(0, 0, 0),  rgba(0, 0, 0, 0.734), rgba(0, 0, 0, 0.679));
+    background-image: linear-gradient(rgb(129, 11, 11),  rgba(83, 4, 4, 0.734), rgba(48, 1, 1, 0.679));
     text-decoration: none;
 }
 
-.FooterName{
+.Name{
     margin-left: 5rem;
     color: white;
-    max-width: 4rem;
+    max-width: 6rem;
     max-height: 2.5rem;
+    justify-content: center;
 }
 
 .fa{
@@ -31,16 +32,18 @@
     max-height: 2.5rem;
     font-size: 1.5rem;
     text-decoration: none;
+    color: #081feb
 }
 
-.FooterAbout{
+.About{
     margin-left: 5rem;
     color: white;
-    max-width: 4rem;
+    max-width: 6rem;
     max-height: 2.5rem;
+    justify-content: center;
 }
 
-.FooterRules{
+.Rules{
     margin-left: 5rem;
     color: white;
     max-width: 2.5rem;
