--- a/client/src/components/About/About.module.css
+++ b/client/src/components/About/About.module.css
@@ -1,7 +1,31 @@
-.Box{
-    height: 90vh;
-    text-align: center;
-}       
+.principalContainer {
+    display: flex;
+    position: relative;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    background: conic-gradient(
+      from 140deg at -15% -60%,
+      #fe4f22 -10.7deg,
+      rgba(0, 0, 0, 0) 349.17deg,
+      #fe4f22 349.3deg,
+      rgba(0, 0, 0, 0) 709.17deg
+    );
+    box-sizing: border-box;
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+  }
+  .centerViewContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100vw; 
+  }
+  .principalContainer h2 {
+    color: white;
+  }     
 
 .Cards{
     display: grid;
@@ -9,8 +33,6 @@
     grid-template-rows: repeat(2, 1fr);
     grid-column-gap: 15px;
     grid-row-gap: 50px;
-    
-    
 
 }
 
@@ -18,6 +40,8 @@
     justify-self: center;
     margin-top: 5vh;
     margin-bottom: 5vh;
+    color: white;
+
 }
 
 .ProfilePicture{
@@ -41,7 +65,7 @@
     border-radius: 1rem;
     transition: all;
     transition-duration: 0.8s;
-    border: 1px solid rgb(74, 114, 201);
+    border: 1px solid rgb(40, 60, 104);
     margin-left: 70px;
 }
 
@@ -51,7 +75,7 @@
 }
 
 .Names{
-    margin-top: 0.2rem;
+    margin-top: -1rem;
     grid-row:2/3;
     grid-column: 1/3;
     justify-self: center;
@@ -63,23 +87,37 @@
     grid-row: 4/5;
     grid-column: 1/2;
     justify-self: center;
-    width: 3.5rem;
-    height: 3.5rem;
+    width: 2.5rem;
+    height: 2.5rem;
 }
 
 .LinkedIn {
     grid-row: 4/5;
     grid-column: 2/3;
     justify-self: center;
-    width: 3.5rem;
-    height: 3.5rem;
+    width: 2.5rem;
+    height: 2.5rem;
 }
 
-.aboutRole {
+.Role {
     margin-bottom: 0.5rem;
     border-width: 0 0 0.1rem 0;
     border-style: groove;
     grid-row: 3/4;
     grid-column: 1/3;
-    color: rgb(32, 169, 223);
+    color: white;
+    font-size: 1.1rem;
 }
+
+.button {
+    margin-left: 100rem;
+    font-size: 18px;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0) 349.17deg;
+    font-family: "Marker Felt";
+    margin-top: 1rem;
+  }
+  .button:hover {
+    transform: scale(1.1);
+    box-shadow: 0px 0px 20px #fe4f22;
+  }
