--- a/client/src/views/SocioPage/components/MyActivities/MyActivities.module.css
+++ b/client/src/views/SocioPage/components/MyActivities/MyActivities.module.css
@@ -71,3 +71,31 @@
     color: white;
 } */
 
+.myActivitiesContainer{
+    width: 100%;
+    display: flex;
+    max-width: 100%;
+}
+.myActivitiesCard{
+    width: 100%;
+    margin: 20px;
+    border-radius: 6px;
+    overflow: hidden;
+    background: #fff;
+    box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
+    cursor: default;
+    transition: all 400ms ease;
+}
+.myActivitiesCard:hover{
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
+    transform: translateY(-3%);
+}
+.myActivitiesCard img{
+    width: 100%;
+    height: 210px;
+}
+.myActivitiesCard p{
+    padding: 15px;
+    text-align: center;
+}
+
