--- a/client/src/views/AdminPage/components/CustomInput/CustomInput.module.css
+++ b/client/src/views/AdminPage/components/CustomInput/CustomInput.module.css
@@ -14,14 +14,33 @@
 .phoneInput {
   border: none;
   background-color: whitesmoke;
-  width: 280px;
+  width: 300px;
   margin-top: 10px;
-
-  padding: 10px;
   font-family: sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 5px;
 }
+.phoneInput span {
+  background-color: red;
+  padding: 4px;
+  margin-right: 5px;
+  background-color: white;
+  border-radius: 5px;
+  font-weight: 600;
+  color: #fe4f22;
+}
 
+.phoneNumberInput {
+  background-color: transparent;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+}
+.phoneNumberInput:focus {
+  outline: 1px solid #fe4f22;
+}
 .inputContainer {
   justify-content: space-around;
   display: flex;
