Mejorando admin dashboard

--- a/client/src/views/AdminPage/components/AdminCardView/AdminCardView.module.css
+++ b/client/src/views/AdminPage/components/AdminCardView/AdminCardView.module.css
@@ -175,6 +175,10 @@
   font-weight: 600;
 }
 
+.deleteUserBtn:hover {
+  cursor: pointer;
+}
+
 @media screen and (max-width: 1050px) {
   .cardLayout {
     width: 70vw;
