--- a/client/src/views/SocioPage/components/Recetas/Card.module.css
+++ b/client/src/views/SocioPage/components/Recetas/Card.module.css
@@ -35,3 +35,16 @@
 .Card:hover {
   transform: scale(1.1);
 }
+
+.detalle{
+    margin-left: 4rem;
+    max-width: 2rem;
+    max-height: 2rem;
+    font-size: 1rem;
+    text-decoration: none;
+    color: #646674
+}
+.detalle:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 0px 20px #fe4f22;
+}
