--- a/client/src/views/AdminPage/components/CustomInput/CustomInput.module.css
+++ b/client/src/views/AdminPage/components/CustomInput/CustomInput.module.css
@@ -7,6 +7,11 @@
   font-family: sans-serif;
   border-radius: 5px;
 }
+.suffixIcon {
+  position: relative;
+  top: -28px;
+  right: -270px;
+}
 .customInput:focus {
   outline: 1px solid #fe4f22;
 }
