--- a/client/src/views/AdminPage/components/CustomModal/CustomModal.module.css
+++ b/client/src/views/AdminPage/components/CustomModal/CustomModal.module.css
@@ -40,7 +40,22 @@
   display: flex;
   flex-direction: column;
 }
-
+.customSelectTag {
+  background-color: whitesmoke;
+  border: none;
+  width: 250px;
+  margin-top: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  color: black;
+}
+.customSelectTag:focus {
+  outline: 1px solid #fe4f22;
+}
+.customSelectTag option {
+  font-family: sans-serif;
+  color: grey;
+}
 .customTextArea {
   border: none;
   background-color: whitesmoke;
