--- a/client/src/views/AdminPage/components/EditPage/EditPage.module.css
+++ b/client/src/views/AdminPage/components/EditPage/EditPage.module.css
@@ -75,6 +75,23 @@
   outline: 1px solid #fe4f22;
 }
 
+.customSelectTag {
+  background-color: whitesmoke;
+  border: none;
+  width: 250px;
+  margin-top: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  color: black;
+}
+.customSelectTag:focus {
+  outline: 1px solid #fe4f22;
+}
+.customSelectTag option {
+  font-family: sans-serif;
+  color: grey;
+}
+
 .editBtn {
   border: none;
   border-radius: 5px;
