--- a/client/src/views/AdminPage/components/AdminCardView/AdminCardView.module.css
+++ b/client/src/views/AdminPage/components/AdminCardView/AdminCardView.module.css
@@ -12,6 +12,24 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.customSelectTag {
+  background-color: whitesmoke;
+  border: none;
+  width: 200px;
+  margin-top: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  color: black;
+  margin-right: 20px;
+}
+.customSelectTag:focus {
+  outline: 1px solid #fe4f22;
+}
+.customSelectTag option {
+  font-family: sans-serif;
+  color: grey;
+}
 .addBtn {
   border: none;
   border-radius: 5px;
@@ -23,6 +41,7 @@
   height: 40px;
   background-color: #fe4f22;
 }
+
 .addDisabledBtn {
   border: none;
   border-radius: 5px;
