--- a/client/src/views/SocioPage/components/MisCompras/MisCompras.module.css
+++ b/client/src/views/SocioPage/components/MisCompras/MisCompras.module.css
@@ -25,8 +25,20 @@
     width: 100%;
 }
 
- .columnas, .filas {
+ .columnas {
     padding: 20;
+}
+.filasAct {
+    display: flex;
+    flex-direction: column;
+}
+.filasAct2 {
+    display: flex;
+    flex-direction: column;
+}
+.hi{
+    visibility: hidden;
+
 }
 .encabezado{
     background-color: #fe4f22;
