--- a/client/src/components/Checkout/style.css
+++ b/client/src/components/Checkout/style.css
@@ -5,3 +5,22 @@
 .email-show{
     display: block;
 }
+
+.timer-hidden{
+    display: none;
+}
+
+.timer-show{
+    display: block;
+    position: absolute;
+    top: 15vh;
+    width: 40vw;
+    height: 70vh;
+    background-color: #000000e1;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    color: #ffffff;
+}
