--- a/client/src/components/NewClases/newClases.module.css
+++ b/client/src/components/NewClases/newClases.module.css
@@ -100,6 +100,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    background-image: url("../../assets/logo.png")
 }
 
 
