--- a/client/src/views/SocioPage/components/Recetas/Recetas.module.css
+++ b/client/src/views/SocioPage/components/Recetas/Recetas.module.css
@@ -2,7 +2,7 @@
     padding-top: 30px;
     padding-bottom: 20px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr ;
+    grid-template-columns: 1fr 1fr 1fr 1fr ;
     max-width: 1200px;
     margin: 0 auto;
     gap: 3.2rem;
